Get emojis from first found tab or opens last used emoji slack page in new tab and fetches them

--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,9 @@
     "default_icon": "icon.png"
   },
   "permissions": [
-    "activeTab", 
+    "tabs", 
     "clipboardWrite",
-    "history"
+    "history",
+    "https://*.slack.com/customize/emoji"
   ]
 }
